All repairs and menu

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 <link rel="stylesheet" href="main.css">
 </div>
 </head>
-    <body class="navbar">
-        <div class="wrapper" id="home">
+    <body>
+        <div class="navbar" id="HOME">
             <font face="sans-serif" color="#017bf5" size="4">
-                <br><a href="#HOME">HOME</a>
-                <br><a href="#PORTFOLIO">PORTFOLIO</a>
-                <br><a href="#RESOURCES">RESOURCES</a>
-                <br><a href="#BLOG">BLOG</a>
-                <br><a href="#CONTACT ME">CONTACT ME</a>
-            </font>        
+                <a href="#HOME">HOME</a>
+                <a href="#PORTFOLIO">PORTFOLIO</a>
+                <a href="#RESOURCES">RESOURCES</a>
+                <a href="#BLOG">BLOG</a>
+                <a href="#CONTACT ME">CONTACT ME</a>                    
+            </font>
         </div>
     </body>
-<body>
-<div class="wrapper" align="left" id="home article">
-    <h2>Clinton Fourie Tel: +27617002835 Mail: clinton.fourieza@outlook.com</h2>   
+<body>    
+     <div class="wrapper" class="main" align="left" id="home article">
+        <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">
             <h3>This is part of my DevOps project and this site is still under construction!</h3>
                 <p>My static website is pointing to my AWS s3 public bucket (DNS).
                 <br>I have setup 2x development VM's (1x Windows 10 32bit and 1x Ubuntu 20.04 64bit)
@@ -33,12 +33,12 @@
                 <br>I have tested and all code commits exactly as I want it to with it updateing within seconds of my push.
                 <br>I need to check the commit time on Github vs the commit time on AWS to see what the update time difference is! 
                 </p>
-</div>
+        </div>
 </body>
 <body>
     <div class="wrapper" id="PORTFOLIO">
-        <h2 align="center"><font face="sans-serif" color="#017bf5" size="5.5">PORTFOLIO</font></h2> 
-    <div class="wrapper" align="center">
+        <h2 align="left"><font face="sans-serif" color="#017bf5" size="5.5">PORTFOLIO</font></h2> 
+    <div class="wrapper" align="left">
         <h3>Network Diagram (Home Lab):</h3>
         <img src="/images/Network Diagram 01_2.png" alt="Clinton Fourie 02" class="Network01">
 <br />
@@ -47,10 +47,9 @@
 
     </div>
 </body>
-<br />
 <body>
-    <div class="wrapper" align="center" id="RESOURCES">
-        <h2 align="center"><font face="sans-serif" color="#017bf5" size="5.5">RESOURCES</font></h2>         
+    <div class="wrapper" align="left" id="RESOURCES">
+        <h2 align="left"><font face="sans-serif" color="#017bf5" size="5.5">RESOURCES</font></h2>         
         <h4>Gitlab and OverOps; discuss quality gates.</h4>
     <div class="wrapper" align="left" id="RESOURCES
         <p>
@@ -58,6 +57,7 @@
         <br><a href="/Documents/devopsmaturity.pdf">2) PDF: OverOps - Tali Soroker: Delivering Reliable Software in the Enterprise</a>
     </p>
     </div>
+    <div class="wrapper" align="left">
         <h3>DevOps (AWS Pipeline):</h3>
     <img src="/images/AWSpipelineconfig2.PNG" alt="Clinton Fourie 04" class="AWSpipelineconfig">
     <h3>DevOps (AWS Active CodeCommit Pipeline):</h3>
@@ -68,7 +68,7 @@
 </body>
 <br />
 <body>
-    <div class="wrapper" align="center" id="BLOG">
+    <div class="wrapper" align="left" id="BLOG">
         <h2><font face="sans-serif" color="#017bf5" size="5.5">BLOG</font></h2> 
             <h4>Blog post 01; DevOps discussion (28/07/2020)</h4>
                 <div class="wrapper" align="left">
@@ -88,10 +88,10 @@
 </body>
 </body>
     <div class="wrapper" id="CONTACT ME">
-        <h2 align="center"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT ME</font></h2> 
+        <h2 align="left"><font face="sans-serif" color="#017bf5" size="5.5">CONTACT ME</font></h2> 
             <form action="https://formspree.io/maypvlva" method="POST">
     </div>
-    <div div class="wrapper" align="center" name="ClintonContact">
+    <div div class="wrapper" align="left" name="ClintonContact">
     <form>
         <table cellpadding="5" cellspacing="12" border="1" height="200">
             <tr>
