--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
     </body>
 <body>    
-     <div class="wrapper" class="main" align="left" id="home article">
+     <div class="wrapper" align="left" id="home article">
         <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">
             <h3>This is part of my DevOps project and this site is still under construction!</h3>
                 <p>My static website is pointing to my AWS s3 public bucket (DNS).
