--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             </font>
         </div>
     </body>
+    <br>
+    <br>
 <body>    
      <div class="main" align="left" id="home article">
         <img src="/images/Clinton2.png" alt="Clinton Fourie 01" class="Clinton">
@@ -36,8 +38,8 @@
         </div>
 </body>
 <body>
-    <div class="wrapper" id="PORTFOLIO">
-        <h2 align="left"><font face="sans-serif" color="#017bf5" size="5.5">PORTFOLIO</font></h2> 
+    <div class="wrapper" align="left" id="PORTFOLIO">
+        <h2><font face="sans-serif" color="#017bf5" size="5.5">PORTFOLIO</font></h2> 
     <div class="wrapper" align="left">
         <h3>Network Diagram (Home Lab):</h3>
         <img src="/images/Network Diagram 01_2.png" alt="Clinton Fourie 02" class="Network01">
@@ -49,11 +51,11 @@
 </body>
 <body>
     <div class="wrapper" align="left" id="RESOURCES">
-        <h2 align="left"><font face="sans-serif" color="#017bf5" size="5.5">RESOURCES</font></h2>         
+        <h2><font face="sans-serif" color="#017bf5" size="5.5">RESOURCES</font></h2>         
         <h4>Gitlab and OverOps; discuss quality gates.</h4>
     <div class="wrapper" align="left" id="RESOURCES
         <p>
-        <a href="https://youtu.be/cknZfRYR8UI">1) Video: Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
+        <a href="https://youtu.be/cknZfRYR8UI"> 1) Video: Testing is Not Sufficient: 5 Ways to Know If Your Code is Really Production-Ready</a>
         <br><a href="/Documents/devopsmaturity.pdf">2) PDF: OverOps - Tali Soroker: Delivering Reliable Software in the Enterprise</a>
     </p>
     </div>
@@ -66,7 +68,6 @@
     <img src="/images/CommitsClinton2.PNG" alt="Clinton Fourie 06" class="CommitsClinton">
     </div>
 </body>
-<br />
 <body>
     <div class="wrapper" align="left" id="BLOG">
         <h2><font face="sans-serif" color="#017bf5" size="5.5">BLOG</font></h2> 
