--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </form>
     </div>
 <body>
-    <div class="wrapper" align="center" id="home article">
+    <div class="wrapper" align="left" id="home article">
         <h2>Clinton Fourie Tel: +27617002835 Mail: clinton.fourieza@outlook.com</h2>
     </div>
 </html>
